--- a/Mobile_App/MyApplication/app/src/main/res/layout/activity_travelbook_view_activity.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/layout/activity_travelbook_view_activity.xml
@@ -4,25 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="travel_buddyapp.travelbuddyapp.TripActivity"
-    android:background="@drawable/citylights_imgae">
+    tools:context="travel_buddyapp.travelbuddyapp.Travelbook_view_activity"
+    android:background="@drawable/books_image">
 
     <TextView
-        android:id="@+id/Trip_text"
+        android:id="@+id/Travelbook_text"
         android:layout_width="296dp"
         android:layout_height="65dp"
-        android:layout_marginStart="130dp"
-        android:layout_marginTop="16dp"
-        android:text="Trip 1"
+        android:text="Travel Books"
+        android:textAlignment="center"
         android:textColor="#f7f7f9"
         android:textColorLink="@android:color/black"
         android:textSize="50sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintTop_creator="1"
-        tools:layout_editor_absoluteX="160dp"
-        android:layout_marginLeft="130dp" />
+        app:layout_constraintLeft_toLeftOf="@+id/back_button"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="65dp"
+        android:layout_marginLeft="44dp" />
 
     <Button
         android:id="@+id/back_button"
@@ -42,21 +41,8 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintVertical_bias="0.0" />
 
-    <Button
-        android:id="@+id/viewmap_button"
-        android:layout_width="213dp"
-        android:layout_height="55dp"
-        android:text="View Map"
-        android:background="#4a90e2"
-        android:textColor="#f7f7f9"
-        android:layout_marginStart="85dp"
-        app:layout_constraintLeft_toLeftOf="@+id/back_button"
-        android:layout_marginTop="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/Trip_text"
-        android:layout_marginLeft="85dp" />
-
     <ListView
-        android:id="@+id/tripresults_listview"
+        android:id="@+id/travelbookresults_listview"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="155dp"
