--- a/Mobile_App/MyApplication/app/src/main/res/layout/travelbook_list.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/layout/travelbook_list.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/destination_name"
+        android:id="@+id/travelbook_name"
+        android:textAlignment="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textStyle="bold"
@@ -14,7 +15,7 @@
         />
 
     <TextView
-        android:id="@+id/destination_description"
+        android:id="@+id/travelbook_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="27sp"
