--- a/Mobile_App/MyApplication/app/src/main/res/layout/activity_login.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
     android:background="@drawable/gradient_blue2">
 
     <Button
-        android:id="@+id/login_button"
+        android:id="@+id/bLogin"
         android:layout_width="265dp"
         android:layout_height="48dp"
         android:layout_marginEnd="62dp"
@@ -18,78 +18,38 @@
         android:background="#5cb85c"
         android:textColor="#f7f7f9"
         android:text="Login"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/password_text"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/forgot_password_button"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/back_button" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <EditText
-        android:id="@+id/username_text"
-        android:layout_width="351dp"
+        android:id="@+id/etUserName"
+        android:layout_width="310dp"
         android:layout_height="40dp"
-        android:inputType="textEmailAddress"
-        android:layout_marginLeft="17dp"
-        app:layout_constraintLeft_toLeftOf="@+id/back_button"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/username_label" />
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:hint="User Name:"
+        android:inputType="text|textEmailAddress"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="13dp"
+        app:layout_constraintBottom_toTopOf="@+id/password_text" />
 
     <EditText
         android:id="@+id/password_text"
-        android:layout_width="351dp"
+        android:layout_width="310dp"
         android:layout_height="40dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:hint="Password:"
         android:inputType="textPassword"
-        android:layout_marginTop="9dp"
-        app:layout_constraintTop_toBottomOf="@+id/password_label"
-        android:layout_marginLeft="17dp"
-        app:layout_constraintLeft_toLeftOf="@+id/back_button" />
-
-    <TextView
-        android:id="@+id/login_label"
-        android:layout_width="124dp"
-        android:layout_height="65dp"
-        android:text="Login"
-        android:textColor="#f7f7f9"
-        android:textSize="50sp"
-        android:layout_marginStart="51dp"
-        app:layout_constraintLeft_toRightOf="@+id/back_button"
-        android:layout_marginLeft="59dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="31dp" />
-
-    <Button
-        android:id="@+id/back_button"
-        android:layout_width="68dp"
-        android:layout_height="41dp"
-        android:text="Back"
-        android:textColor="#f7f7f9"
-        android:background="@null"
-        android:layout_marginStart="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="0dp" />
-
-    <TextView
-        android:id="@+id/username_label"
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        android:textColor="#f7f7f9"
-        android:text="Username:"
-        android:textSize="24sp"
-        android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="@+id/back_button"
-        android:layout_marginTop="17dp"
-        app:layout_constraintTop_toBottomOf="@+id/login_label" />
-
-    <TextView
-        android:id="@+id/password_label"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:textColor="#f7f7f9"
-        android:text="Password:"
-        android:textSize="24sp"
-        android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="@+id/back_button"
-        android:layout_marginTop="7dp"
-        app:layout_constraintTop_toBottomOf="@+id/username_text" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/bLogin" />
 
     <Button
         android:id="@+id/forgot_password_button"
@@ -100,9 +60,12 @@
         android:text="Forgot your password?"
         android:textColor="#f7f7f9"
         android:textSize="18sp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/login_button"
-        android:layout_marginLeft="81dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
+        android:layout_marginBottom="8dp" />
 
 </android.support.constraint.ConstraintLayout>
