--- a/Mobile_App/MyApplication/app/src/main/res/layout/activity_sign_up.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/layout/activity_sign_up.xml
@@ -9,132 +9,151 @@
 
 
     <EditText
-        android:id="@+id/Name_editText"
-        android:layout_width="298dp"
-        android:layout_height="45dp"
+        android:id="@+id/etUserName"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
         android:ems="10"
+        android:hint="User Name:"
         android:inputType="textPersonName"
         android:text=""
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        android:layout_marginLeft="45dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="9dp"
+        app:layout_constraintBottom_toTopOf="@+id/etEmail" />
 
     <EditText
-        android:id="@+id/Email_editText2"
-        android:layout_width="298dp"
-        android:layout_height="45dp"
-        android:layout_marginLeft="45dp"
-        android:layout_marginTop="10dp"
+        android:id="@+id/etEmail"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
         android:ems="10"
+        android:hint="Email:"
         android:inputType="textEmailAddress"
+        android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/etNumber" />
 
     <EditText
-        android:id="@+id/Password_editText3"
-        android:layout_width="298dp"
-        android:layout_height="45dp"
-        android:layout_marginLeft="45dp"
-        android:layout_marginTop="6dp"
+        android:id="@+id/etPassword"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
         android:ems="10"
+        android:hint="Password:"
         android:inputType="textPassword"
+        android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/etPassword2" />
 
     <EditText
-        android:id="@+id/ConPassword_editText4"
-        android:layout_width="298dp"
-        android:layout_height="45dp"
-        android:layout_marginLeft="45dp"
-        android:layout_marginTop="8dp"
+        android:id="@+id/etPassword2"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
         android:ems="10"
+        android:hint="Confirm password:"
         android:inputType="textPassword"
+        android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sign Up"
-        android:textColor="#f7f7f9"
-        android:textSize="50sp"
-        android:layout_marginLeft="106dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="26dp" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Username:"
-        android:textSize="20sp"
-        android:textColor="#f7f7f9"
-        android:layout_marginLeft="45dp"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button2"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Email:"
-        android:textSize="20sp"
-        android:textColor="#f7f7f9"
-        android:layout_marginLeft="45dp"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button2"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/Name_editText" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Password:"
-        android:textSize="20sp"
-        android:textColor="#f7f7f9"
-        android:layout_marginTop="7dp"
-        app:layout_constraintTop_toBottomOf="@+id/Email_editText2"
-        android:layout_marginLeft="45dp"
-        app:layout_constraintLeft_toLeftOf="@+id/Back_button2" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Confirm Password:"
-        android:textSize="20sp"
-        android:textColor="#f7f7f9"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/Password_editText3"
-        android:layout_marginLeft="45dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/etTown" />
 
     <Button
-        android:id="@+id/Sign_Up_button"
-        android:layout_width="300dp"
-        android:layout_height="57dp"
+        android:id="@+id/bSignUp"
+        android:layout_width="299dp"
+        android:layout_height="43dp"
         android:text="Sign Up"
         android:textSize="20sp"
         android:background="#5cb85c"
         android:textColor="#f7f7f9"
-        android:layout_marginTop="14dp"
-        app:layout_constraintTop_toBottomOf="@+id/ConPassword_editText4"
-        android:layout_marginLeft="47dp"
+        android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        tools:layout_editor_absoluteY="442dp"
-        tools:layout_editor_absoluteX="47dp" />
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.511"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp" />
 
-    <Button
-        android:id="@+id/Back_button2"
-        android:layout_width="83dp"
-        android:layout_height="42dp"
-        android:text="Back"
-        tools:layout_editor_absoluteX="0dp"
-        android:textColor="#f7f7f9"
-        android:background="@null"
-        tools:layout_editor_absoluteY="0dp" />
+    <EditText
+        android:id="@+id/etFirstName"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:ems="10"
+        android:hint="First Name:"
+        android:inputType="textPersonName"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/etLastName"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvSignup"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintVertical_bias="0.952"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <EditText
+        android:id="@+id/etTown"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:ems="10"
+        android:hint="Town:"
+        android:inputType="textPersonName"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/bSignUp" />
+
+    <EditText
+        android:id="@+id/etLastName"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:ems="10"
+        android:hint="Last Name"
+        android:inputType="textPersonName"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="9dp"
+        app:layout_constraintBottom_toTopOf="@+id/etUserName" />
+
+    <TextView
+        android:id="@+id/tvSignup"
+        android:layout_width="129dp"
+        android:layout_height="52dp"
+        android:fontFamily="sans-serif"
+        android:text="Signup"
+        android:textColor="@android:color/white"
+        android:textSize="40sp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <EditText
+        android:id="@+id/etNumber"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:ems="10"
+        android:hint="Number:"
+        android:inputType="textPersonName"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/etPassword" />
+
 </android.support.constraint.ConstraintLayout>
