--- a/Mobile_App/MyApplication/app/src/main/res/layout/content_main.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/layout/content_main.xml
@@ -12,8 +12,8 @@
 
     <TextView
         android:id="@+id/Main_Text_1"
-        android:layout_width="341dp"
-        android:layout_height="0dp"
+        android:layout_width="221dp"
+        android:layout_height="45dp"
         android:text="Welcome to"
         android:textSize="40sp"
         android:textColor="#f7f7f9"
@@ -25,7 +25,11 @@
         tools:layout_constraintLeft_creator="1"
         android:layout_marginBottom="12dp"
         app:layout_constraintLeft_toLeftOf="@+id/Main_Text_2"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteY="16dp"
+        tools:layout_editor_absoluteX="53dp"
+        android:layout_marginLeft="32dp"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/Main_Text_2"
@@ -43,7 +47,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/Sign_Up_Button"
+        android:id="@+id/bSignup_Link"
         android:layout_width="0dp"
         android:layout_height="55dp"
         android:background="#4a90e2"
@@ -51,24 +55,24 @@
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="@+id/Login_Button"
+        app:layout_constraintRight_toRightOf="@+id/bLogin_Link"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="78dp"
-        app:layout_constraintLeft_toLeftOf="@+id/Login_Button"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintLeft_toLeftOf="@+id/bLogin_Link"
         app:layout_constraintHorizontal_bias="0.0" />
 
     <Button
-        android:id="@+id/Login_Button"
+        android:id="@+id/bLogin_Link"
         android:layout_width="224dp"
         android:layout_height="55dp"
         android:background="#4a90e2"
         android:text="Login"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/Sign_Up_Button"
+        app:layout_constraintBottom_toTopOf="@+id/bSignup_Link"
         app:layout_constraintRight_toRightOf="parent"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="11dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
@@ -81,10 +85,10 @@
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/Main_Text_2"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.587" />
+        app:layout_constraintHorizontal_bias="0.64" />
 
 </android.support.constraint.ConstraintLayout>
