--- a/Mobile_App/MyApplication/app/src/main/res/layout/activity_login.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/layout/activity_login.xml
@@ -10,6 +10,16 @@
     android:background="@drawable/gradient_blue2">
 
     <Button
+        android:id="@+id/Back_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Back"
+        tools:layout_editor_absoluteX="3dp"
+        android:textColor="#f7f7f9"
+        android:background="@null"
+        tools:layout_editor_absoluteY="3dp" />
+
+    <Button
         android:id="@+id/bLogin"
         android:layout_width="265dp"
         android:layout_height="48dp"
@@ -18,38 +28,30 @@
         android:background="#5cb85c"
         android:textColor="#f7f7f9"
         android:text="Login"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/forgot_password_button"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:layout_marginTop="18dp"
+        app:layout_constraintTop_toBottomOf="@+id/etpassword"
+        android:layout_marginLeft="57dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Back_button" />
 
     <EditText
         android:id="@+id/etUserName"
         android:layout_width="310dp"
         android:layout_height="40dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:hint="User Name:"
         android:inputType="text|textEmailAddress"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginBottom="13dp"
-        app:layout_constraintBottom_toTopOf="@+id/password_text" />
+        android:layout_marginLeft="43dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/username_text" />
 
     <EditText
-        android:id="@+id/password_text"
+        android:id="@+id/etpassword"
         android:layout_width="310dp"
         android:layout_height="40dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:hint="Password:"
         android:inputType="textPassword"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/bLogin" />
+        android:layout_marginLeft="43dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/password_text" />
 
     <Button
         android:id="@+id/forgot_password_button"
@@ -60,12 +62,45 @@
         android:text="Forgot your password?"
         android:textColor="#f7f7f9"
         android:textSize="18sp"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
-        android:layout_marginBottom="8dp" />
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/bLogin"
+        android:layout_marginLeft="91dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/username_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Username:"
+        android:textColor="#f7f7f9"
+        android:textSize="24dp"
+        android:layout_marginLeft="43dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        android:layout_marginTop="17dp"
+        app:layout_constraintTop_toBottomOf="@+id/login_text" />
+
+    <TextView
+        android:id="@+id/password_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Password:"
+        android:textColor="#f7f7f9"
+        android:textSize="24dp"
+        android:layout_marginLeft="43dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        android:layout_marginTop="15dp"
+        app:layout_constraintTop_toBottomOf="@+id/etUserName" />
+
+    <TextView
+        android:id="@+id/login_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Login"
+        android:textColor="#f7f7f9"
+        android:textSize="50dp"
+        android:layout_marginLeft="127dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="60dp" />
 
 </android.support.constraint.ConstraintLayout>
