--- a/Mobile_App/MyApplication/app/src/main/res/layout/activity_sign_up.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/layout/activity_sign_up.xml
@@ -7,6 +7,15 @@
     android:background="@drawable/gradient_blue2"
     tools:context="travel_buddyapp.travelbuddyapp.SignUpActivity">
 
+    <Button
+        android:id="@+id/Back_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Back"
+        tools:layout_editor_absoluteX="0dp"
+        android:textColor="#f7f7f9"
+        android:background="@null"
+        tools:layout_editor_absoluteY="0dp" />
 
     <EditText
         android:id="@+id/etUserName"
@@ -16,12 +25,10 @@
         android:hint="User Name:"
         android:inputType="textPersonName"
         android:text=""
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginBottom="9dp"
-        app:layout_constraintBottom_toTopOf="@+id/etEmail" />
+        android:layout_marginLeft="55dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintTop_toBottomOf="@+id/username_text"
+        android:layout_marginStart="55dp" />" />
 
     <EditText
         android:id="@+id/etEmail"
@@ -30,12 +37,10 @@
         android:ems="10"
         android:hint="Email:"
         android:inputType="textEmailAddress"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/etNumber" />
+        android:layout_marginLeft="55dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintTop_toBottomOf="@+id/email_text"
+        android:layout_marginStart="55dp" />
 
     <EditText
         android:id="@+id/etPassword"
@@ -44,12 +49,10 @@
         android:ems="10"
         android:hint="Password:"
         android:inputType="textPassword"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/etPassword2" />
+        android:layout_marginLeft="55dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintTop_toBottomOf="@+id/password_text"
+        android:layout_marginStart="55dp" />
 
     <EditText
         android:id="@+id/etPassword2"
@@ -58,17 +61,15 @@
         android:ems="10"
         android:hint="Confirm password:"
         android:inputType="textPassword"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/etTown" />
+        android:layout_marginLeft="55dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintTop_toBottomOf="@+id/confirmpassword_text"
+        android:layout_marginStart="55dp" />
 
     <Button
         android:id="@+id/bSignUp"
-        android:layout_width="299dp"
-        android:layout_height="43dp"
+        android:layout_width="221dp"
+        android:layout_height="48dp"
         android:text="Sign Up"
         android:textSize="20sp"
         android:background="#5cb85c"
@@ -77,9 +78,10 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.511"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp" />
+        android:layout_marginBottom="6dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <EditText
         android:id="@+id/etFirstName"
@@ -88,15 +90,10 @@
         android:ems="10"
         android:hint="First Name:"
         android:inputType="textPersonName"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/etLastName"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/tvSignup"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintVertical_bias="0.952"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:layout_marginLeft="55dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintTop_toBottomOf="@+id/firstname_text"
+        android:layout_marginStart="55dp" />
 
     <EditText
         android:id="@+id/etTown"
@@ -105,12 +102,10 @@
         android:ems="10"
         android:hint="Town:"
         android:inputType="textPersonName"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/bSignUp" />
+        android:layout_marginLeft="55dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        android:layout_marginTop="-3dp"
+        app:layout_constraintTop_toBottomOf="@+id/Town_text" />
 
     <EditText
         android:id="@+id/etLastName"
@@ -119,12 +114,11 @@
         android:ems="10"
         android:hint="Last Name"
         android:inputType="textPersonName"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginBottom="9dp"
-        app:layout_constraintBottom_toTopOf="@+id/etUserName" />
+        android:layout_marginLeft="55dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        android:layout_marginTop="1dp"
+        app:layout_constraintTop_toBottomOf="@+id/lastname_text"
+        android:layout_marginStart="55dp" />
 
     <TextView
         android:id="@+id/tvSignup"
@@ -133,13 +127,14 @@
         android:fontFamily="sans-serif"
         android:text="Signup"
         android:textColor="@android:color/white"
-        android:textSize="40sp"
+        android:textSize="35sp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <EditText
         android:id="@+id/etNumber"
@@ -148,12 +143,109 @@
         android:ems="10"
         android:hint="Number:"
         android:inputType="textPersonName"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/etPassword" />
+        android:layout_marginLeft="55dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        android:layout_marginTop="1dp"
+        app:layout_constraintTop_toBottomOf="@+id/number_text"
+        android:layout_marginStart="55dp" />
+
+    <TextView
+        android:id="@+id/username_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Username:"
+        android:textColor="#f7f7f9"
+        android:textSize="18sp"
+        android:layout_marginLeft="55dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        android:layout_marginTop="2dp"
+        app:layout_constraintTop_toBottomOf="@+id/etLastName"
+        android:layout_marginStart="55dp" />
+
+    <TextView
+        android:id="@+id/password_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Password:"
+        android:textColor="#f7f7f9"
+        android:textSize="18sp"
+        android:layout_marginLeft="55dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        android:layout_marginTop="2dp"
+        app:layout_constraintTop_toBottomOf="@+id/etEmail"
+        android:layout_marginStart="55dp" />
+
+    <TextView
+        android:id="@+id/firstname_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="First Name:"
+        android:textColor="#f7f7f9"
+        android:textSize="18sp"
+        android:layout_marginLeft="55dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintTop_toBottomOf="@+id/tvSignup"
+        android:layout_marginStart="55dp" />
+
+    <TextView
+        android:id="@+id/lastname_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Last Name:"
+        android:textColor="#f7f7f9"
+        android:textSize="18sp"
+        android:layout_marginLeft="55dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintTop_toBottomOf="@+id/etFirstName"
+        android:layout_marginStart="55dp" />
+
+    <TextView
+        android:id="@+id/email_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Email:"
+        android:textColor="#f7f7f9"
+        android:textSize="18sp"
+        android:layout_marginLeft="55dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        android:layout_marginTop="3dp"
+        app:layout_constraintTop_toBottomOf="@+id/etNumber"
+        android:layout_marginStart="55dp" />
+
+    <TextView
+        android:id="@+id/number_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Number:"
+        android:textColor="#f7f7f9"
+        android:textSize="18sp"
+        android:layout_marginLeft="55dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintTop_toBottomOf="@+id/etUserName"
+        android:layout_marginStart="55dp" />
+
+    <TextView
+        android:id="@+id/confirmpassword_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Confirm Password:"
+        android:textColor="#f7f7f9"
+        android:textSize="18sp"
+        android:layout_marginLeft="55dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        app:layout_constraintTop_toBottomOf="@+id/etPassword"
+        android:layout_marginStart="55dp" />
+
+    <TextView
+        android:id="@+id/Town_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Town:"
+        android:textColor="#f7f7f9"
+        android:textSize="18sp"
+        android:layout_marginLeft="55dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Back_button"
+        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/etPassword2" />
 
 </android.support.constraint.ConstraintLayout>
